--- a/netbeans.conf
+++ b/netbeans.conf
@@ -77,10 +77,14 @@ netbeans_default_options="-J-XX:+UseStringDeduplication -J-Xss2m -J-Xms32m -J-Dj
 # installer points to one of those in the NetBeans application shortcut 
 # based on the Java version selected at installation time.
 #
-netbeans_jdkhome=$(readlink -f /usr/bin/java | sed "s:bin/java::")
+
+#if [ -d /usr/lib/jvm/default-java ]; then
+#    netbeans_jdkhome="/usr/lib/jvm/default-java"
+#else
+#    netbeans_jdkhome=$(readlink -f /usr/bin/java | sed "s:bin/java::")
+#fi
 
 # Additional module clusters:
 # using ${path.separator} (';' on Windows or ':' on Unix):
 #
 #netbeans_extraclusters="/absolute/path/to/cluster1:/absolute/path/to/cluster2"
-
