--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,10 @@
 # output every command that modifies files on the build system.
 #DH_VERBOSE = 1
 
+SRC_PACKAGE = netbeans
+PACKAGE = $(SRC_PACKAGE)
+TARBALL = $(SRC_PACKAGE)_$(SRC_VERSION).orig.tar.xz
+
 # see EXAMPLES in dpkg-buildflags(1) and read /usr/share/dpkg/*
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/default.mk
@@ -16,10 +20,12 @@ include /usr/share/dpkg/default.mk
 # package maintainers to append LDFLAGS
 #export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
+override_dh_auto_build:
+	ant -DuseExternalJarsOnLinux=true -buildfile netbeans/build.xml build-nozip
 
 # main packaging script based on dh7 syntax
 %:
-	dh $@ 
+	dh $@  --with maven_repo_helper
 
 # debmake generated override targets
 # This is example for Cmake (See http://bugs.debian.org/641051 )
