--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Vcs-Browser: https://github.com/Vitexus/netbeans.deb
 Package: netbeans
 Architecture: all
 Depends: ${misc:Depends},java-common,default-jre|openjdk-11-jre|openjdk-8-jre|openjdk-9-jre|oracle-java8-jre|oracle-java9-jre,libnotify-bin
+Recommends: netbeans-php-tools
 Description: Apache NetBeans is an open source development environment, tooling platform, and application framework.
  Quickly and easily develop desktop, mobile, and web applications
  with Java, JavaScript, HTML5, PHP, C/C++ and more.
