Buildiable on Debian 10 Buster

--- a/debian/rules
+++ b/debian/rules
@@ -21,8 +21,7 @@ include /usr/share/dpkg/default.mk
 #export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
 override_dh_auto_build:
-	ant -DuseExternalJarsOnLinux=true -buildfile netbeans/build.xml build-nozip
-
+	ant -Dpermit.jdk9.builds=true -DuseExternalJarsOnLinux=true -buildfile netbeans/build.xml build-nozip
 # main packaging script based on dh7 syntax
 %:
 	dh $@  --with maven_repo_helper
