--- a/debian/rules
+++ b/debian/rules
@@ -26,6 +26,11 @@ override_dh_auto_build:
 %:
 	dh $@  --with maven_repo_helper
 
+override_dh_auto_install:
+	rm -rf debian/netbeans/usr/share/netbeans/ide/bin/nativeexecution/MacOSX*
+	rm -rf debian/netbeans/usr/share/netbeans/ide/bin/nativeexecution/Windows*
+	dh_auto_install
+
 # debmake generated override targets
 # This is example for Cmake (See http://bugs.debian.org/641051 )
 #override_dh_auto_configure:
