clone netbeans sources using http

--- a/debian/rules
+++ b/debian/rules
@@ -20,15 +20,17 @@ include /usr/share/dpkg/default.mk
 # package maintainers to append LDFLAGS
 #export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
-override_dh_prep:
-	dh_prep
-
-override_dh_auto_build:
-	if [ ! -d netbeans ]; then git clone git@github.com:Vitexus/netbeans.git --depth 1 ; else cd netbeans; git pull; cd ..; fi;
-	ant -DuseExternalJarsOnLinux=true  -Dpermit.jdk9.builds=true  -buildfile netbeans/build.xml build-nozip
 # main packaging script based on dh7 syntax
 %:
 	dh $@  --with maven_repo_helper
+
+
+override_dh_prep:
+	if [ ! -d netbeans ]; then git clone https://github.com/Vitexus/netbeans.git --depth 1 ; else cd netbeans; git pull; cd ..; fi;
+	dh_prep
+
+override_dh_auto_build:
+	ant -DuseExternalJarsOnLinux=true  -Dpermit.jdk9.builds=true  -buildfile netbeans/build.xml build-nozip
 
 override_dh_install:
 	dh_install
